LPD-56562 gradle-plugins-workspace: uses Files.writeString since Workspace requires at least Java 11